[build-system]
	requires = [
		"poetry-core>=1.0.0",
		"poetry-dynamic-versioning==0.20.0",
	]
	build-backend = "poetry.core.masonry.api"

[tool.poetry]
	name = "mud-protocols"
	version = "0.0.0"
	description = "MUD protocols implemented in Python."
	authors = ["Nick Stockton <nstockton@users.noreply.github.com>"]
	license = "MPL-2.0"
	readme = "README.md"
	homepage = "https://github.com/nstockton/mud-protocols"
	repository = "https://github.com/nstockton/mud-protocols"
	documentation = "https://nstockton.github.io/mud-protocols"
	keywords = ["mud", "protocol", "telnet"]
	classifiers = [
		"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
		"Programming Language :: Python",
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3 :: Only",
		"Programming Language :: Python :: 3.7",
		"Programming Language :: Python :: 3.8",
		"Programming Language :: Python :: 3.9",
		"Programming Language :: Python :: 3.10",
		"Programming Language :: Python :: 3.11",
		"Programming Language :: Python :: Implementation",
		"Programming Language :: Python :: Implementation :: CPython",
		"Development Status :: 5 - Production/Stable",
		"Intended Audience :: Developers",
		"Operating System :: MacOS",
		"Operating System :: MacOS :: MacOS X",
		"Operating System :: Microsoft",
		"Operating System :: Microsoft :: Windows",
		"Operating System :: OS Independent",
		"Operating System :: POSIX",
		"Operating System :: POSIX :: BSD",
		"Operating System :: POSIX :: Linux",
		"Operating System :: Unix",
		"Topic :: Software Development :: Libraries",
	]
	packages = [
		{include = "mudproto", from = "src"},
	]
	include = [
		{path = "tests/*", format = "sdist"},
		{path = "poetry.lock", format = "sdist"},
	]
	exclude = []

[tool.poetry.dependencies]
	python = "^3.7"
	typing-extensions = "^4.1"

[tool.poetry.dev-dependencies]
	click = "8.0.4"  # Required by Tan.
	coverage = {version = "^6.5", extras = ["toml"]}
	flake8 = "^3.9"
	flake8-tabs = "^2.3"
	isort = "^5.10.1"
	jinja2 = "3.0.3"  # Required by Tan.
	mkdocs = "1.2.3"
	mkdocs-autorefs = "0.3.1"
	mkdocs-material = "8.1.3"
	mkdocs-material-extensions = "1.0.3"
	mkdocstrings = "0.17.0"
	mypy = ">=0.950,<1.0"
	poetry-dynamic-versioning = "0.20.0"
	pre-commit = "^2.17"
	pyproject-flake8 = "^3.9"
	pytkdocs = {git = "https://github.com/nstockton/pytkdocs.git", rev = "9991d493b408c403ac5691074e2af2e509f22926"}
	tan = "^21.14"

[tool.poetry-dynamic-versioning]
	enable = true
	vcs = "git"
	format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.g{{ commit|truncate(7,true,'') }}{% endif %}"

[tool.poetry-dynamic-versioning.substitution]
	files = [
		"src/*.py", "src/*/__init__.py", "src/*/__version__.py", "src/*/_version.py",
	]
	patterns = [
		"(^__version__(?:\\s*[:]\\s*str)?\\s*=\\s*['\"])[^'\"]*(['\"])",
	]

[tool.black]
	use-tabs = true
	safe = true
	line-length = 110
	target-version = ["py37", "py38", "py39", "py310"]
	exclude = '(/(\.eggs|\.git|\.mypy_cache|\.tox|\.venv|build|dist)|__pycache__)'
	include = '/((src/mudproto|tests).*\.py[isw]?)$'

[tool.coverage.report]
	precision = 0
	fail_under = 100.0
	show_missing = true
	skip_covered = true
	sort = "Cover"
	exclude_lines = [
		'\#\s*pragma: no cover',
		'^\s*raise AssertionError\b',
		'^\s*raise NotImplementedError\b',
		'^\s*def __repr__',
		'^\s*def __str__',
		'^\s*if __name__ == .__main__.:',
	]

[tool.coverage.run]
	source = ["mudproto"]
	omit = []

[tool.flake8]
	# Note that boolean values need to be inside strings. Flake8 will convert them.
	# Plugins
	use-flake8-tabs = "true"
	# Not all checks are replaced by flake8-tabs, however, pycodestyle is still not compatible with tabs.
	use-pycodestyle-indent = "false"
	continuation-style = "hanging"
	## The following are replaced by flake8-tabs plugin, reported as ET codes rather than E codes.
	# E121, E122, E123, E126, E127, E128,
	## The following (all disabled) are not replaced by flake8-tabs,
	# E124 - Requires mixing spaces and tabs: Closing bracket does not match visual indentation.
	# E125 - Does not take tabs into consideration: Continuation line with same indent as next logical line.
	# E129 - Requires mixing spaces and tabs: Visually indented line with same indent as next logical line
	# E131 - Requires mixing spaces and tabs: Continuation line unaligned for hanging indent
	# E133 - Our preference handled by ET126: Closing bracket is missing indentation
	# Reporting
	statistics = "true"
	doctests = "true"
	show-source = "true"
	# Options
	max-complexity = 15
	max-line-length = 110
	# Final bracket should match indentation of the start of the line of the opening bracket
	hang-closing = "false"
	ignore = [
		"E203",  # whitespace before ':'. Caused by Black.
		"W191",  # indentation contains tabs
		"W503",  # line break before binary operator. We want W504(line break after binary operator)
		"ET113",  # (flake8-tabs) use of alignment as indentation, but option continuation-style=hanging does not permit this.
		"ET121",  # (flake8-tabs) unexpected number of tabs at start of definition line. Caused by Black.
	]
	exclude = [
		".git",
		"__pycache__",
		".env",
		".venv",
		"env",
		"venv",
		"env.bak",
		"venv.bak",
		"ENV",
	]
	filename = [
		"*.py",
		"*.pys",
		"*.pyw",
	]

[tool.isort]
	line_length = 110  # The max length of an import line (used for wrapping long imports).
	color_output = false
	# Specify what extensions isort can be ran against.
	supported_extensions = ["py", "pyi", "pys", "pyw"]
	extend_skip = []  # List of files to skip.
	indent = "tab"  # String to place for indents.
	multi_line_output = 3  # Vertical hanging indent for long sections of multiple imports.
	include_trailing_comma = true  # Include a trailing comma on multi line imports that include parentheses.
	force_grid_wrap = 0  # Only consider line length when forcing lines to be grid wrapped.
	use_parentheses = true  # Use parentheses for line continuation on length limit instead of slashes.
	ensure_newline_before_comments = true  # Insert a blank line before a comment following an import.
	indented_import_headings = false  # Do not include import headings inside indented imports.
	float_to_top = true  # Float all non-indented imports to the top of the file.
	lines_after_imports = 2  # Add this many lines after imports / before code begins.
	force_adds = false  # Do not force import adds if the original file is empty.
	from_first = false  # Show from imports after straight ones.
	combine_as_imports = false  # Combine as imports on the same line.
	order_by_type = true  # Order imports by type, which is determined by case, in addition to alphabetically.
	reverse_relative = true  # Reverse order of relative imports.
	add_imports = ["from __future__ import annotations"]  # Add the specified import lines to all files.
	default_section = "STDLIB"  # Set the default section for imports.
	# The heading to display for future imports.
	import_heading_future = "Future Modules:"
	# The heading to display for standard library imports.
	import_heading_stdlib = "Built-in Modules:"
	# The heading to display for third-party imports.
	import_heading_thirdparty = "Third-party Modules:"
	# Override known third-party imports.
	known_third_party = ["typing_extensions"]
	# The heading to display for first-party imports.
	import_heading_firstparty = "MUD Protocol Modules:"
	# Override known first-party imports.
	known_first_party = ["mudproto"]
	# The heading to display for local imports.
	import_heading_localfolder = "Local Modules:"

[tool.mypy]
	files = ["src/mudproto", "tests"]
	exclude = '^$'
	local_partial_types = true
	strict = true
	disallow_any_unimported = true
	disallow_any_decorated = true
	warn_unreachable = true
	show_error_codes = true
	no_color_output = true

[[tool.mypy.overrides]]
	module = "tests.*"
	disallow_any_decorated = false
