[metadata]
name = mud-protocols
description = MUD protocols implemented in Python.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Nick Stockton
author_email = nstockton@users.noreply.github.com
license = Mozilla Public License 2.0 (MPL 2.0)
license_file = LICENSE.txt
url = https://github.com/nstockton/mud-protocols
project_urls =
	homepage = https://github.com/nstockton/mud-protocols
	Documentation = https://nstockton.github.io/mud-protocols
keywords =
	mud
	telnet
	protocol
platforms = any
classifiers =
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries
	Operating System :: POSIX :: Linux
	Operating System :: Unix
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.7
zip_safe = False
packages =
	mudproto
package_dir =
	mudproto = mudproto

[options.package_data]
mudproto =
	py.typed

[flake8]
# Plugins
use-flake8-tabs = True
# Not all checks are replaced by flake8-tabs, however, pycodestyle is still not compatible with tabs.
use-pycodestyle-indent = False
continuation-style = hanging
## The following are replaced by flake8-tabs plugin, reported as ET codes rather than E codes.
# E121, E122, E123, E126, E127, E128,
## The following (all disabled) are not replaced by flake8-tabs,
# E124 - Requires mixing spaces and tabs: Closing bracket does not match visual indentation.
# E125 - Does not take tabs into consideration: Continuation line with same indent as next logical line.
# E129 - Requires mixing spaces and tabs: Visually indented line with same indent as next logical line
# E131 - Requires mixing spaces and tabs: Continuation line unaligned for hanging indent
# E133 - Our preference handled by ET126: Closing bracket is missing indentation
# Reporting
statistics = True
doctests = True
show-source = True
# Options
max-complexity = 15
max-line-length = 110
# Final bracket should match indentation of the start of the line of the opening bracket
hang-closing = False
ignore =
	E203  # whitespace before ':'. Caused by Black.
	W191  # indentation contains tabs
	W503  # line break before binary operator. We want W504(line break after binary operator)
	ET121  # (flake8-tabs) unexpected number of tabs at start of definition line. Caused by Black.
exclude =
	.git
	__pycache__
	.env
	.venv
	env
	venv
	env.bak
	venv.bak
	ENV
filename =
	*.py
	*.pys
	*.pyw
