[metadata]
name = mud-protocols
description = MUD protocols implemented in Python.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Nick Stockton
author_email = nstockton@users.noreply.github.com
license = Mozilla Public License 2.0 (MPL 2.0)
license_file = LICENSE.txt
url = https://github.com/nstockton/mud-protocols
project_urls =
	homepage = https://github.com/nstockton/mud-protocols
	Documentation = https://nstockton.github.io/mud-protocols
keywords =
	mud
	telnet
	protocol
platforms = any
classifiers =
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries
	Operating System :: POSIX :: Linux
	Operating System :: Unix
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.7
zip_safe = False
packages =
	mudproto
package_dir =
	mudproto = mudproto

[options.package_data]
mudproto =
	py.typed
